Work in progress

--- a/src/Anim/CMakeLists.txt
+++ b/src/Anim/CMakeLists.txt
@@ -1,11 +1,8 @@
 fips_begin_module(Anim)
     fips_files(
-        Anim.h Anim.cc
+        AnimSystem.h AnimSystem.cc
+        Types.h
     )
     fips_dir(Core)
-    fips_files(
-        Types.h
-        AnimSetup.h
-    )
     fips_deps(Resource)
 fips_end_module()
