AnimSystem data mgmt and test

--- a/src/Anim/CMakeLists.txt
+++ b/src/Anim/CMakeLists.txt
@@ -1,4 +1,5 @@
 fips_begin_module(Anim)
+    fips_vs_warning_level(3)
     fips_files(
         AnimSystem.h AnimSystem.cc
         Types.h
@@ -6,3 +7,13 @@ fips_begin_module(Anim)
     fips_dir(Core)
     fips_deps(Resource)
 fips_end_module()
+
+fips_begin_unittest(Anim)
+    fips_vs_warning_level(3)
+    fips_dir(UnitTests)
+    fips_files(
+        AnimSystemTest.cc
+    )
+    fips_deps(Anim)
+fips_end_unittest()
+
