Work in progress

--- a/src/Anim/CMakeLists.txt
+++ b/src/Anim/CMakeLists.txt
@@ -1,19 +1,15 @@
 fips_begin_module(Anim)
     fips_vs_warning_level(3)
     fips_files(
-        AnimSystem.h AnimSystem.cc
-        Types.h
+        Anim.h Anim.cc
+        AnimTypes.h
     )
-    fips_dir(Core)
     fips_deps(Resource)
 fips_end_module()
 
 fips_begin_unittest(Anim)
     fips_vs_warning_level(3)
     fips_dir(UnitTests)
-    fips_files(
-        AnimSystemTest.cc
-    )
     fips_deps(Anim)
 fips_end_unittest()
 
