Started with animTracker impl and test

--- a/src/Anim/CMakeLists.txt
+++ b/src/Anim/CMakeLists.txt
@@ -7,6 +7,7 @@ fips_begin_module(Anim)
     fips_dir(private)
     fips_files(
         animMgr.h animMgr.cc
+        animTracker.h animTracker.cc
     )
     fips_deps(Core Resource)
 fips_end_module()
@@ -16,6 +17,7 @@ fips_begin_unittest(Anim)
     fips_dir(UnitTests)
     fips_files(
         animMgrTest.cc
+        animTrackerTest.cc
     )
     fips_deps(Anim)
 fips_end_unittest()
