Started with anim skeleton

--- a/src/Anim/CMakeLists.txt
+++ b/src/Anim/CMakeLists.txt
@@ -7,7 +7,7 @@ fips_begin_module(Anim)
     fips_dir(private)
     fips_files(
         animMgr.h animMgr.cc
-        animTracker.h animTracker.cc
+        animSequencer.h animSequencer.cc
     )
     fips_deps(Core Resource)
 fips_end_module()
@@ -16,8 +16,9 @@ fips_begin_unittest(Anim)
     fips_vs_warning_level(3)
     fips_dir(UnitTests)
     fips_files(
-        animMgrTest.cc
-        animTrackerTest.cc
+        AnimLibraryTest.cc
+        AnimSkeletonTest.cc
+        animSequencerTest.cc
     )
     fips_deps(Anim)
 fips_end_unittest()
