Have both BindPose and InvBindPose in AnimBoneSetup

--- a/fips.yml
+++ b/fips.yml
@@ -7,7 +7,7 @@ imports:
         git:    https://github.com/floooh/oryol.git
 exports:
     header-dirs:
-        src
+        - src
     modules:
         Anim:   src/Anim
 
